[gd_scene load_steps=3 format=3 uid="uid://ddj7lxy8426dr"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_snban"]

[sub_resource type="LabelSettings" id="LabelSettings_xc3kn"]
font_size = 32
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_snban")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Summoning 
Grounds"
label_settings = SubResource("LabelSettings_xc3kn")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 160)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="Play_Button" type="Button" parent="CenterContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options_Button" type="Button" parent="CenterContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit_Button" type="Button" parent="CenterContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="CenterContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Play_Button" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Options_Button" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_button_down"]
